--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 21 12:53:17 CST 2022
-sdk.dir=/Users/sec/Library/Android/sdk
+#Mon Nov 21 19:27:33 CST 2022
+sdk.dir=C\:\\Users\\liuhui\\AppData\\Local\\Android\\Sdk
